--- a/templates/index.html
+++ b/templates/index.html
@@ -129,17 +129,23 @@
     </style>
 	
     <script>
-        // Randomly shuffle the button colors on page load
-        document.addEventListener('DOMContentLoaded', function() {
-            var buttons = document.querySelectorAll('.button');
-            var buttonColors = ['button-color-1', 'button-color-2', 'button-color-3', 'button-color-4', 'button-color-5', 'button-color-6', 'button-color-7', 'button-color-8'];
+	document.addEventListener('DOMContentLoaded', function() {
+    var buttons = document.querySelectorAll('.button');
+    var buttonColors = ['button-color-1', 'button-color-2', 'button-color-3', 'button-color-4', 'button-color-5', 'button-color-6', 'button-color-7', 'button-color-8'];
 
-            buttons.forEach(function(button) {
-                var randomIndex = Math.floor(Math.random() * buttonColors.length);
-                button.classList.add(buttonColors[randomIndex]);
-            });
-        });
+    // Shuffle the button colors array randomly
+    buttonColors.sort(function() {
+        return 0.5 - Math.random();
+    });
+
+    // Apply colors from the shuffled array to each button
+    buttons.forEach(function(button, index) {
+        button.classList.add(buttonColors[index]);
+    });
+});
     </script>
+	
+
 </head>
 <body>
     <video id="video-background" autoplay muted loop>
@@ -149,7 +155,7 @@
     
     <div id="header">
     <div class="logo-container">
-        <a href="https://ermine.at" target="_blank"> <!-- Add anchor tag for the logo -->
+        <a href="https://art.ermine.at" target="_blank"> <!-- Add anchor tag for the logo -->
             <img class="logo" src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
         </a>
     </div>
@@ -158,14 +164,16 @@
 
     <div id="content">
         <div id="all-art">
-            <h2>I draw graphite art and create highly stylized transit maps.</h2> 
-			<h2>My artstyle incorporates railway themes (every picture features nets of rail tracks to some extent), and some blend of industrial fantasy and leaves.</h2>
+            <h2>Ich zeichne Graphitkunst und erstelle hochstilisierte Öffi-Karten.</h2> 
+			<h2>Mein Kunststil umfasst Eisenbahnthemen (jedes Bild zeigt Netze von Eisenbahnschienen) und eine Mischung aus Industriephantasie und Blättern.</h2>
             <div id="filter-categories">
                 <div class="button-container">
                     {% for category in art_categories %}
                         <a class="button" href="/art/{{ category }}/">{{ category }}</a>
                     {% endfor %}
-                    <a class="button button-color-9" href="https://displate.com/ermine" target="_blank">Graphite art on Displate</a>
+					                    <a class="button button-color-4" href="https://art.ermine.at" target="_blank">Graphitkunst zum Verkauf</a>
+
+<a id="filter-remove-button" class="button button-color-9" href="https://displate.com/ermine" target="_blank" style="display: none;">Filter entfernen</a>
                 </div>
             </div>
 			
