--- a/templates/index.html
+++ b/templates/index.html
@@ -126,6 +126,27 @@
                 text-align: center;
             }
         }
+		
+			.calendly-button2 {
+        background-color: #2C2C54;
+		            font-weight: bold;
+
+        color: white;
+        border: none;
+            padding: 30px 60px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 20px;
+            text-decoration: none;
+            display: inline-block;
+            border-radius: 10px;
+            transition: background-color 0.3s ease-in-out;
+        }
+  
+    .calendly-button2:hover {
+        background-color: #80A4ED;  /* A darker shade when hovered */
+    }
+	
     </style>
 	
     <script>
@@ -170,8 +191,10 @@
                 <div class="button-container">
                     {% for category in art_categories %}
                         <a class="button" href="/art/{{ category }}/">{{ category }}</a>
+
                     {% endfor %}
-					                    <a class="button button-color-4" href="https://art.ermine.at" target="_blank">Graphitkunst zum Verkauf</a>
+					                    <a class="button button-color-4" href="https://displate.com/ermine" target="_blank">Graphitkunst zum Verkauf</a>
+						<button class="calendly-button2" onclick="window.location.href='https://radlzentrum.ermine.at'">Zurück zum Menü</button>
 
 <a id="filter-remove-button" class="button button-color-9" href="https://displate.com/ermine" target="_blank" style="display: none;">Filter entfernen</a>
                 </div>
