--- a/templates/index.html
+++ b/templates/index.html
@@ -147,6 +147,17 @@
         background-color: #80A4ED;  /* A darker shade when hovered */
     }
 	
+	.list-field {
+		background-color: rgba(0, 0, 0, 0.7);
+		border-radius: 10px;
+		padding: 20px;
+		margin: 20px auto;
+		color: white;
+		max-width: 70%;
+		text-align: center;
+						margin-bottom: 65px; /* Adjust this value for spacing between the buttons */
+
+	}
     </style>
 	
     <script>
@@ -185,16 +196,18 @@
 
     <div id="content">
         <div id="all-art">
-            <h2>Ich zeichne Graphitkunst und erstelle hochstilisierte Öffi-Karten.</h2> 
-			<h2>Mein Kunststil umfasst Eisenbahnthemen (jedes Bild zeigt Netze von Eisenbahnschienen) und eine Mischung aus Industriephantasie und Blättern.</h2>
+				<div class="list-field" id="listField">
+            <h2>I draw graphite art and create highly stylized public transport maps.</h2> 
+			<h2>My artstyle incorporates railway themes (every picture contains networks of tracks) and a mix of industrial fantasy and leaves.</h2>
+			</div>
             <div id="filter-categories">
                 <div class="button-container">
                     {% for category in art_categories %}
                         <a class="button" href="/art/{{ category }}/">{{ category }}</a>
 
                     {% endfor %}
-					                    <a class="button button-color-4" href="https://displate.com/ermine" target="_blank">Graphitkunst zum Verkauf</a>
-						<button class="calendly-button2" onclick="window.location.href='https://radlzentrum.ermine.at'">Zurück zum Menü</button>
+					                    <a class="button button-color-4" href="https://displate.com/ermine" target="_blank">Graphite art on Displate</a>
+						<button class="calendly-button2" onclick="window.location.href='https://radlzentrum.ermine.at'">Back to Menu</button>
 
 <a id="filter-remove-button" class="button button-color-9" href="https://displate.com/ermine" target="_blank" style="display: none;">Filter entfernen</a>
                 </div>
